--- a/Online Fashion Store - mini Project/css/stylesheet.css
+++ b/Online Fashion Store - mini Project/css/stylesheet.css
@@ -2,3 +2,75 @@
 <html lang ="en">
 <head>
     <title>stylesheet</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+  
+    <link rel="stylesheet" href="<?php echo $server; ?>css/style.css" >
+ 
+<!-- Latest compiled and minified JavaScript -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <style>
+        body{
+            background-color: black;
+            background-image: url("bird_logo.jpg");
+            background-repeat: no-repeat;
+            background-position: center;
+            background-attachment: fixed;
+        }
+        input[type=button],input[type=submit],input[type=reset]{
+            background-color: black;
+            border:none;
+            color: white;
+            padding: 3px 24px;
+            text-decoration: none;
+            cursor: pointer;
+            
+        }
+
+        .wrapper{
+            width: 50px
+            padding: 10px;
+            text-align: center;
+            background-color: orange;
+        }
+        .marque{
+            color: gold;
+        }
+        ul
+        {
+            list-style-type:square;
+            margin: 0;
+            padding: 0;
+            width: 200px;
+            background-color: #f1f1f1;
+            border:1px solid #555;
+        }
+        li a{
+            display: block;
+            color:#000;
+            padding: 16px 32px;
+            text-decoration: none;
+        }
+        li{
+            text-align: center;
+            border-bottom:none;
+        }
+        li:last-child{
+            border-bottom:none;
+        }
+        li a.active{
+            background-color: orange;
+            color: white;
+        }
+        li a:hover:not(.active){
+            background-color: #555;
+            color: white;
+        }
+
+        </style>
+        </head>
